--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~8.2.8",
     "@angular/platform-browser-dynamic": "~8.2.8",
     "@angular/router": "~8.2.8",
+    "express": "^4.17.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
@@ -46,7 +47,7 @@
     "typescript": "~3.5.3"
   },
   "engines": {
-    "node" : "~11.6.0",
-    "npm" : "~6.11.3"
+    "node": "~11.6.0",
+    "npm": "~6.11.3"
   }
 }
