--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "@angular/router": "~8.2.8",
     "express": "^4.17.1",
     "hammerjs": "^2.0.8",
+    "isomorphic-ws": "^4.0.1",
     "path": "^0.12.7",
     "rxjs": "~6.4.0",
+    "socket.io": "^2.3.0",
     "tslib": "^1.10.0",
+    "ws": "^7.2.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
