--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.17.1",
     "hammerjs": "^2.0.8",
     "isomorphic-ws": "^4.0.1",
+    "mysql": "^2.17.1",
     "path": "^0.12.7",
     "rxjs": "~6.4.0",
     "socket.io": "^2.3.0",
